hard-gists/723736/run.log
=== Docker Run Log for 723736 ===
Started at: Mi 29. Okt 17:03:06 CET 2025

[2025-10-29 17:03:06] START: Running container for 723736
[2025-10-29 17:03:06] SUCCESS: Container ffec6d7dd46b18e1f5d800aa83951dbbfdb7e5a8d044d7f88883023f264554ce started for 723736
=== Container logs for 723736 ===
  File "/snippet.py", line 39
    print iter
    ^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 723736 ===
[2025-10-29 17:03:08] INFO: Container ffec6d7dd46b18e1f5d800aa83951dbbfdb7e5a8d044d7f88883023f264554ce has stopped
